# scribe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scribe/: __init__.py  captions.py  cli.py  config.py  fmt.py  manifest.py  models.py  output.py  routing.py  run.py  transcript.py  urls.py
scribe/asr/: __init__.py  base.py  parakeet.py
scribe/sources/: __init__.py  base.py  youtube.py
scribe/tui/: __init__.py  app.py
scripts/: bench_asr.py
tests/: test_asr.py  test_captions.py  test_config.py  test_output.py  test_picker.py  test_routing.py  test_run.py  test_transcript.py  test_urls.py
