[project]
name = "scribe"
version = "0.2.0"
description = "Fast, comfortable CLI for mass transcript extraction from YouTube (captions-first, Parakeet ASR fallback)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mateusz" }]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    # yt-dlp ships very often and occasionally breaks extractors — keep a moving but
    # bounded floor (uv tool install ignores uv.lock, so end users get latest-in-range).
    "yt-dlp>=2026.6,<2027",
    "textual>=8.2",
    "typer>=0.12",
    # Heavy native ASR stack: Apple-Silicon-only. Marker → other platforms skip it
    # (captions still work) instead of failing to build the mlx wheel.
    "parakeet-mlx ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
# Drop-in escape hatch if the built-in DataTable ever lags at very large lists (kill-gate M5).
fastlist = ["textual-fastdatatable"]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/NieLubieRudej/scribe"
Repository = "https://github.com/NieLubieRudej/scribe"
Issues = "https://github.com/NieLubieRudej/scribe/issues"

[project.scripts]
scribe = "scribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scribe"]
